<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/dp12"
    android:layout_marginBottom="@dimen/dp30">

    <TextView
        android:layout_marginBottom="@dimen/dp2"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/sp15"
        android:textColor="@color/black_333333"
        android:text="@string/improve_limit_content_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/improve_content_style"
        android:text="@string/improve_limit_content1" />

    <TextView
        style="@style/improve_content_style"
        android:text="@string/improve_limit_content2" />

    <TextView
        style="@style/improve_content_style"
        android:text="@string/improve_limit_content3" />

    <TextView
        style="@style/improve_content_style"
        android:text="@string/improve_limit_content4" />

</LinearLayout>