<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:padding="@dimen/dp30">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:cardCornerRadius="@dimen/dp4">

            <LinearLayout
                android:id="@+id/rl_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="@dimen/dp18">

                <ImageView
                    android:id="@+id/iv_loanerror_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:padding="@dimen/dp18"
                    android:scaleType="centerCrop"
                    android:src="@drawable/dialog_close_gray"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp14"
                    android:scaleType="centerCrop"
                    android:src="@drawable/dialog_loanfail"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/withdrawcode_expired"
                    android:textColor="@color/black_333333"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp10"
                    android:text="@string/loan_again"
                    android:textColor="@color/gray_999999"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btn_confirm"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp40"
                    android:layout_marginLeft="@dimen/dp20"
                    android:layout_marginTop="@dimen/dp28"
                    android:layout_marginRight="@dimen/dp20"
                    android:background="@drawable/radius5_btn_main"
                    android:elevation="@dimen/dp2"
                    android:gravity="center"
                    android:text="@string/confirm"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>